--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,3 +1,27 @@
-# This file stores configurations for your Shopify app.
+# Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
-scopes = "write_products"
+client_id = "57499b94d4a8a6f0d9b7feb34df1adf5"
+name = "product-qr-generator"
+application_url = "https://broke-accomplish-gate-taking.trycloudflare.com"
+embedded = true
+
+[build]
+automatically_update_urls_on_dev = true
+dev_store_url = "ecom-v2-technologies.myshopify.com"
+
+[access_scopes]
+# Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
+scopes = ""
+
+[auth]
+redirect_urls = [
+  "https://broke-accomplish-gate-taking.trycloudflare.com/auth/callback",
+  "https://broke-accomplish-gate-taking.trycloudflare.com/auth/shopify/callback",
+  "https://broke-accomplish-gate-taking.trycloudflare.com/api/auth/callback"
+]
+
+[webhooks]
+api_version = "2024-01"
+
+[pos]
+embedded = false
